--- a/math250/week12.html
+++ b/math250/week12.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html>
   <head>
@@ -22,7 +23,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 700px; padding-left: 1cm; font-size: 175%;" background="bg.jpg">
+  <body style="width: 1000px; padding-left: 1cm; font-size: 175%;" background="bg.jpg">
 
   <h1>Math 250 </h1>
 
@@ -138,7 +139,7 @@
 
 <P> Consider the system of first order DEs below.
   $$\vec{x}' = \begin{bmatrix}3 & -2 & 0\\ -1 & 3 & -2\\0 & -1 & 3\end{bmatrix} \vec{x}$$
-  
+
  <ol type='1'>
    <li> Show that \(\vec{x}_1 = \begin{bmatrix}2e^t\\2e^t\\e^t\end{bmatrix}, \vec{x}_2 = \begin{bmatrix}2e^{3t}\\ 0 \\-e^{-3t}\end{bmatrix},\vec{x}_3 = \begin{bmatrix}2e^{5t}\\-2e^{5t}\\e^{5t}\end{bmatrix}\) are solutions to this system
    <li> Can you identify the eigenvalues and eigenvectors of the matrix from this information?
@@ -147,14 +148,20 @@
   </ol>
 </div>
 
-<!--
-<h2>Example 8 - Bouyancy problem</h2>
+
+<h2>Example 8 - systems practice</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
 <div id="ex8" class="collapse">
-<P>
-
+<P> Match each IVP with its associated phase plane and find the particular solution.
+<table>
+  <tr> <th> IVP </th> <th> Phase planes</th></tr>
+  <tr> <td> 1) \(x'= 3x + 4y, y' = 3x + 2y, x(0)=y(0)=1 \) </td> <td align='left'> A)<img src="./wk12_ex8_ppD.png" width=300></td></tr>
+  <tr> <td> 2) \(x'= 9x + 5y, y' = -6x - 2y, x(0)= 1, y(0)=0 \) </td> <td align='left'> B)<img src="./wk12_ex8_ppB.png" width=300></td></tr>
+  <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='left'> C)<img src="./wk12_ex8_ppC.png" width=300></td></tr>
+  <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='left'> D)<img src="./wk12_ex8_ppA.png" width=300></td></tr>
 </div>
 
+<!--
 <h2>Example 9 - Law of Cosines </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example 9</button>
 <div id="ex9" class="collapse">
