--- a/math250/week12.html
+++ b/math250/week12.html
@@ -36,6 +36,7 @@
     <li> Consider the matrix \(A = \begin{bmatrix}-2 & 1 & 1 \\1 & -2 & 1\\ 1 & 1 & -2 \end{bmatrix}\). We know that \(|A - \lambda I| = \lambda(\lambda+3)^2\). Find the eigenvalues and eigenvectors of \(A\).
     <li> Show that \(e^{5t}\begin{bmatrix}2\\1\end{bmatrix}\) is a solution to \(\vec{x}' = \begin{bmatrix}4 & 2\\3 & -1 \end{bmatrix} \vec{x}\).
     <li> Use the <a href="./pplane.jar">pplane</a> software to draw a phase plane for the DE system above.
+    <li> Find the general solution to \(\vec{x}' = \begin{bmatrix}1 & -1 \\ 4 & 1\end{bmatrix}\vec{x}\).
     </ol>
  </div>
 
