--- a/math154/DEs_calc2.html
+++ b/math154/DEs_calc2.html
@@ -109,6 +109,7 @@ Let \(x(t)\) be the amount of chemical \(C\) produced at time \(t\). Let \(a\) a
   <li> Explain why the chemical reaction is modeled with the differential equation
     $$\frac{dx}{dt} = k (a-x)(b-x).$$
   <li> What is the initial condition, i.e. \(x(0) = \)?
+  <li> How many equilibrium solutions are there mathematically? How many realistically?
   <li> Use the fact this is separable and partial fractions to find a solution to the IVP.
  </ol>
 
