--- a/math250/week13.html
+++ b/math250/week13.html
@@ -163,7 +163,7 @@
   <ol type='1'>
     <li>From the solution above, what are the eigenvalues of the matrix above?
     <li>Sketch a phase plane with some solution curves.
-    <li>Explain why \(\vec{x} = \[0, 0\]^T \) is an equilibrium solution.
+    <li>Explain why \(\vec{x} = [0, 0]^T \) is an equilibrium solution.
     <li>What is the name of the type of equilibrium solution here?
   </ol>
 
