--- a/math250/week13.html
+++ b/math250/week13.html
@@ -146,7 +146,7 @@
   <li>Find the eignevalues of the matrix above.
   <li>Find the eigenvectors and find a real-valued solution.
   <li>Sketch a phase plane with some solution curves.
-  <li>Explain why \(\vec{x} = \[0, 0\]^T \) is an equilibrium solution.
+  <li>Explain why \(\vec{x} = [0, 0]^T \) is an equilibrium solution.
   <li>What is the name of the type of equilibrium solution here?
 </ol>
 
