--- a/math250/week13.html
+++ b/math250/week13.html
@@ -65,7 +65,7 @@
 =
 \left\lbrack
 \begin{array}{rr}
--1 & -0.5 \\
+1 & -0.5 \\
 0.5 & -1
 \end{array}
 \right\rbrack
@@ -143,7 +143,7 @@
   <P> Conisder the system below.
     $$\vec{x}' = \begin{bmatrix}0 & -4 \\ 4 & 0\end{bmatrix} \vec{x}$$
 <ol type='1'>
-  <li>Find the eignevalues of the matrix above.
+  <li>Find the eigenvalues of the matrix above.
   <li>Find the eigenvectors and find a real-valued solution.
   <li>Sketch a phase plane with some solution curves.
   <li>Explain why \(\vec{x} = [0, 0]^T \) is an equilibrium solution.
@@ -187,8 +187,8 @@
     <li> Sketch a phase plane with some solution curves.
     <li> \(b=s=0\) is an equilibrium solution. Why? Use your answers above to describe the behaviors of solutions near (0,0). What is the name of this type of equilibrium?
     <li> Now assume \(\beta = 3, \gamma = 2, \alpha = -8,  \delta = -13\).
-      A solution is given by \(c_1 e^{-14t}\begin{bmatrix}1\\-2\end{bmatrix} + c_2  e^{-7t}\begin{bmatrix}3\\1 \end{bmatrix}.
-      (0,0) is still an equilibrium. What tis the name of this type of equilibrium solution?
+      A solution is given by \(c_1 e^{-14t}\begin{bmatrix}1\\-2\end{bmatrix} + c_2  e^{-7t}\begin{bmatrix}3\\1 \end{bmatrix}\).
+      (0,0) is still an equilibrium. What is the name of this type of equilibrium solution?
 
   </ol>
 </div>
