--- a/math250/week13.html
+++ b/math250/week13.html
@@ -140,7 +140,7 @@
 <h2>Example 2 - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
 <div id="ex2" class="collapse">
-  <P> Conisder the system below.
+  <P> Consider the system below.
     $$\vec{x}' = \begin{bmatrix}0 & -4 \\ 4 & 0\end{bmatrix} \vec{x}$$
 <ol type='1'>
   <li>Find the eigenvalues of the matrix above.
@@ -156,7 +156,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
 <div id="ex3" class="collapse">
 <br>
-<P> Conisder the system below.
+<P> Consider the system below.
   $$\vec{x}' = \begin{bmatrix}4 & -3 \\ 3 & 4\end{bmatrix} \vec{x}$$
  <P>A real-valued solution is given by
    $$\vec{x}(t) = c_1 e^{4t}\begin{bmatrix}\cos(3t) \\ \sin(3t)\end{bmatrix} + c_2 e^{4t}\begin{bmatrix}-\sin(3t) \\ \cos(3t) \end{bmatrix}.$$
