--- a/math250/week13.html
+++ b/math250/week13.html
@@ -117,7 +117,7 @@
 \right\rbrack. $$
       </ol>
     </td><td><img src="./phaseplanes_wk13.png" width=500></td></tr></table>
-    <li>
+    <li>Find the eigenvalues of \(\vec{x}' = \begin{bmatrix}0 & 1 \\ -3/2 & -1/2\end{bmatrix} \vec{x}\).
     <li>
     </ol>
  </div>
