--- a/math250/week13.html
+++ b/math250/week13.html
@@ -135,6 +135,7 @@
       <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='right'> C)<img src="./wk12_ex8_ppC.png" width=300></td></tr>
       <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='right'> D)<img src="./wk12_ex8_ppA.png" width=300></td></tr>
     </table>
+      <P><a href="./1stOrderSystemIVPs.pdf">Solutions</a>
 </div>
 
 <h2>Example 2 - </h2>
