--- a/math250/week14.html
+++ b/math250/week14.html
@@ -35,7 +35,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> Classify the (0,0) equilibrium solution of \(\vec{x} = \begin{bmatrix} 1 & 2 \\ 3 & 4\end{bmatrix} \vec{x}\).
+    <li> Classify the (0,0) equilibrium solution of \(\vec{x}' = \begin{bmatrix} 1 & 2 \\ 3 & 4\end{bmatrix} \vec{x}\).
     <li>
     </ol>
  </div>
