--- a/math250/week14.html
+++ b/math250/week14.html
@@ -36,7 +36,7 @@
   <div id="ex0" class="collapse">
     <ol type='A'>
     <li> Classify the (0,0) equilibrium solution of \(\vec{x}' = \begin{bmatrix} 1 & 2 \\ 3 & 4\end{bmatrix} \vec{x}\).
-    <li>
+    <li> Classify the (0,0) equilibrium solution of \(\vec{x}' = \begin{bmatrix} 0 & -2 \\ 3 & -4\end{bmatrix} \vec{x}\).
     </ol>
  </div>
 
