--- a/math250/week14.html
+++ b/math250/week14.html
@@ -70,7 +70,7 @@
   <li>Consider a transformation to polar coordinates for this system.
     $$r^2 = x^2 + y^2$$
     $$\tan\theta = \frac{y}{x}$$
-    Find an equation for \(r'\) and show \(theta' = 1\).
+    Find an equation for \(r'\) and show \(\theta' = 1\).
   <li>Analyse the equilibrium solution at \(r=0 \Leftrightarrow (0,0)_{x,y}\) in terms of \(a\).
 </ol>
 
