--- a/math250/week14.html
+++ b/math250/week14.html
@@ -110,6 +110,8 @@
       $$1x - y + 2z = -3$$
       $$4x + 4y - 2z = 1 $$
       $$-2x + 2y - 4z = 6$$
+    <li>Consider a 100 gallon water tank that contains fresh water. Saltwater with concentration 2 lbs per gallon is pumped in at a rate of 10 gallons per minute.
+   The saltwater is perfectly mixed and flows out at a rate of 10 gallons per minute. How much time needs to pass before there is 10 lbs of salt in the tank?
 
   </ol>
 </div>
