--- a/math250/starwarsexample.html
+++ b/math250/starwarsexample.html
@@ -7,7 +7,7 @@ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<title>CSS Star Wars Crawling Titles</title>
+<title>MATH 250</title>
 
 <style>
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
