--- a/other/quests/quest2/start.html
+++ b/other/quests/quest2/start.html
@@ -1,1 +1,33 @@
-1
+<html>
+
+<head>
+<title>NIX BIRTHDAY QUEST</title>
+
+<style>
+body {
+    color: white;
+}
+
+h1 {
+    color: rgb(255,255,255);
+}
+
+p {
+    color: rgb(255,255,255);
+}
+</style>
+</head>
+
+<body background="scales_08.jpg">
+
+<h1 >WELCOME TO YOUR DRAGONQUEST BIRTHDAY QUEST!</h1>
+
+<P><br>
+<img src="./start_img.png" width=1000>
+<br><br>
+<form method="get" action="n0.html">
+    <button type="submit" style="height:50px;width:50px"><b>Start!</b></button>
+</form>
+</form>
+</body>
+</html>
