--- a/other/quests/quest2/n8.html
+++ b/other/quests/quest2/n8.html
@@ -4,8 +4,8 @@
 <title>NIX BIRTHDAY QUEST</title>
 <script type="text/javascript" language="javascript">
 function solve(f){
-if (f.answer.value.toLowerCase()=='cal')
-window.location = 'n1.html';
+if (f.answer.value.toLowerCase()=='chest')
+window.location = 'bananas.html';
 else
 document.getElementById('error').innerHTML='Try Again!';
 }
@@ -30,7 +30,7 @@ p {
 <body background="scales_11.jpg">
 
 
-<img src="./p0.png" height=400 >
+<img src="./p8.png" height=400 >
 <br><br>
 <form name="answerForm" onSubmit="solve(this); return false;">
 <h2>Enter the code : <input name="answer" type="text" size="10" maxlength="20"/>
