--- a/math275/eigenvalues.html
+++ b/math275/eigenvalues.html
@@ -34,7 +34,7 @@
 
  <P>
 <ol type='1'>
-  <li> Calculate the eigenvalues and eignevectors of the matrices below.
+  <li> Calculate the eigenvalues and eigenvectors of the matrices below.
      $$A = \begin{bmatrix}0 & 1 \\-1 & 0 \end{bmatrix}, \hspace{1cm} C = \begin{bmatrix}2 & 1 \\1 & 2 \end{bmatrix}$$
   <li> Let \(D = \begin{bmatrix}-2 & 1 & 1 \\1 & -2 & 1\\ 1 & 1 & -2 \end{bmatrix} \). We know det\( (D-\lambda I) = \lambda (\lambda + 3)^2 \). Find the eigenvalues and associated eigenvectors of \(D\).
 </div>
