--- a/math154/inverses.html
+++ b/math154/inverses.html
@@ -90,7 +90,7 @@ show(p3+pti)
   </div>
 <P>Task: use the picture below along with the theorem above derivatives of inverses to show \(\frac{d}{dx}\cos^{-1}x = \frac{-1}{\sqrt{1-x^2}}\).<br>
 <img src="images/invcos.png" width=300><br>
-<P>Can you repeat this styl of analysis to derive the derivative of inverse sine?
+<P>Can you repeat this style of analysis to derive the derivative of inverse sine?
 <P>What about the derivative of inverse tangent?
 </div>
 </body>
