--- a/math154/exp_log.html
+++ b/math154/exp_log.html
@@ -115,9 +115,12 @@ Plt = text(r"$y=x$",(5.5,5),color='black',fontsize=20)
  <P>Task: prove \(\frac{d}{dx} e^x = e^x\). (hint: if \(y = e^x\) then \(x = \ln y\).)
  <P>Task: show \(\frac{d}{dx} \log_{10}x = \frac{1}{x}\frac{1}{\ln 10}\).<br>
 
-   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#expex">Example</button>
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#expex">Examples</button>
      <div id="expex" class="collapse">
-       <P>Let \(f(x) = xe^{-x}\). Find the domain of \(f\), where it is increasing and decreasing, and where it is concave up and concave down. Then sketch a graph of \(y = f(x)\).
+       <ul>
+         <li>Let \(f(x) = xe^{-x}\). Find the domain of \(f\), where it is increasing and decreasing, and where it is concave up and concave down. Then sketch a graph of \(y = f(x)\).
+         <li>A radioactive substance decays exponetially according to \(M(t) = M_0 e^{kt}\) where \(M(t)\) is the mass at time \(t\) and \(M_0\) is the initial mass. How much time does it take for the mass to reduce by half?
+       </ul>  
      </div>
   </div>
 
