--- a/math154/inverses.html
+++ b/math154/inverses.html
@@ -20,7 +20,8 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px;">
+  <body style="width: 600px; padding-left: 1cm" background="bg.jpg">
+
 
   <h1>Inverse functions</h1>
 
