--- a/math154/inverses.html
+++ b/math154/inverses.html
@@ -65,6 +65,23 @@ $(function () {
 </div>
 
 <h2>Inverse trig functions</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#invtrigbasics">Inverse trig basics</button>
+<div id="invtrigbasics" class="collapse">
+  <P>Find the following values:
+    <ul>
+      <li> \( \cos^{-1} (1)   \)
+      <li> \( \sin^{-1} (1)   \)
+      <li> \( \arccos(0)   \)
+      <li> \( \sin^{-1} \left( \frac{\sqrt{3}{2} \right)   \)
+      <li> \( \cos^{-1} \left( \frac{1}{2}   \)
+      <li> \( \cos^{-1} \left( \frac{-\sqrt{3}{2} \right)    \)
+      <li> \( \arctan(0)   \)
+      <li> \( \tan^{-1}(1)   \)
+      <li> \( \cos^{-1} (2)   \)
+    </ul>
+   <P>Sketch the functions \(\tan(x)\) and \(tan^{-1}(x)\) on the same set of axes. Make note of any interesting observations.
+</div>
+    
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#invtrig">Inverse trig fcns</button>
   <div id="invtrig" class="collapse">
 <P>Question: Sketch a plot of the cosine function. Does this function have an inverse? Why or why not?
