--- a/math154/inverses.html
+++ b/math154/inverses.html
@@ -72,9 +72,9 @@ $(function () {
       <li> \( \cos^{-1} (1)   \)
       <li> \( \sin^{-1} (1)   \)
       <li> \( \arccos(0)   \)
-      <li> \( \sin^{-1} \left( \frac{\sqrt{3}{2} \right)   \)
-      <li> \( \cos^{-1} \left( \frac{1}{2}   \)
-      <li> \( \cos^{-1} \left( \frac{-\sqrt{3}{2} \right)    \)
+      <li> \( \sin^{-1} \left( \frac{\sqrt{3}}{2} \right)   \)
+      <li> \( \cos^{-1} \left( \frac{1}{2}  \right) \)
+      <li> \( \cos^{-1} \left( \frac{-\sqrt{3}}{2} \right)    \)
       <li> \( \arctan(0)   \)
       <li> \( \tan^{-1}(1)   \)
       <li> \( \cos^{-1} (2)   \)
