--- a/math154/inverses.html
+++ b/math154/inverses.html
@@ -81,6 +81,7 @@ $(function () {
     </ul>
    <P>Sketch the functions \(\tan(x)\) and \(tan^{-1}(x)\) on the same set of axes. Make note of any interesting observations.
 </div>
+    <br>
     
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#invtrig">Inverse trig fcns</button>
   <div id="invtrig" class="collapse">
@@ -111,5 +112,16 @@ show(p3+pti)
 <P>Can you repeat this style of analysis to derive the derivative of inverse sine?
 <P>What about the derivative of inverse tangent?
 </div>
+  <br>
+  
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#moreinvtrig">More inverse trig fcns</button>
+  <div id="moreinvtrig" class="collapse">
+  <P>Calculate the following:
+    <ul>
+      <li> \( \frac{d}{dx} \cos^{-1}(2x^2 + 1) \)
+      <li> \( \int \frac{-1}{\sqrt{1 - x^2}dx \)
+      <li> \( \int \frac{-1}{\sqrt{1 - 4x^2}dx \)
+    </ul>
+  </div>
 </body>
 </html>
