--- a/math154/inverses.html
+++ b/math154/inverses.html
@@ -119,8 +119,8 @@ show(p3+pti)
   <P>Calculate the following:
     <ul>
       <li> \( \frac{d}{dx} \cos^{-1}(2x^2 + 1) \)
-      <li> \( \int \frac{-1}{\sqrt{1 - x^2}dx \)
-      <li> \( \int \frac{-1}{\sqrt{1 - 4x^2}dx \)
+      <li> \( \int \frac{-1}{\sqrt{1 - x^2}}dx \)
+      <li> \( \int \frac{-1}{\sqrt{1 - 4x^2}}dx \)
     </ul>
   </div>
 </body>
