--- a/math154/inverses.html
+++ b/math154/inverses.html
@@ -79,7 +79,7 @@ $(function () {
       <li> \( \tan^{-1}(1)   \)
       <li> \( \cos^{-1} (2)   \)
     </ul>
-   <P>Sketch the functions \(\tan(x)\) and \(tan^{-1}(x)\) on the same set of axes. Make note of any interesting observations.
+   <P>Sketch the functions \(\tan(x)\) and \(\tan^{-1}(x)\) on the same set of axes. Make note of any interesting observations.
 </div>
     <br>
     
