--- a/math154/taylor_examples.html
+++ b/math154/taylor_examples.html
@@ -36,6 +36,7 @@ $(function () {
             <li>\(Q(x) = 1 + 4x - 2x^2\)
             <li>\(R(x) = 3 - 2x^2\)
             <li>\(T(x) = 3 - 4x + 2x^2\)
+            <li>All of the above
             <li>None of the above
           </ol>
         <li>Find the third order Taylor polynomial of \(f(x) = \frac{1}{1-x}\) about \(x=0\).
