--- a/math154/taylor_examples.html
+++ b/math154/taylor_examples.html
@@ -81,7 +81,7 @@ $$\rho(t)=\rho_{20}e^{\alpha(t-20)}$$
 where \(t\) is the temperature in \(^o\)C. There are <a href="https://en.wikipedia.org/wiki/Electrical_resistivity_and_conductivity#Resistivity_and_conductivity_of_various_materials">tables</a> that list the values of \(\alpha\) (called the temperature coefficient) and \(\rho_{20}\) (the resistivity
 at \(20^o\)C) for various metals. Except at very low temperatures, the resistivity varies almost linearly with temperature and so it is common to approximate the
  expression
-for \(\rho(t)\) by its first- or second-degree Taylor polynomial at \(t=20\). Find expressions for these linear and quadratic approximations.
+for \(\rho(t)\) by its first- or second-degree Taylor polynomial about \(t=20\). Find expressions for these linear and quadratic approximations.
 
 For copper, \(\alpha=0.0039/^o\)C and \(\rho_{20}=1.7\times 10^{-8}\) \(\Omega\)-m. Calculate the error in your linear and quadratic approximations when the temperatures are (a) \(-250^o\)C, (b) \(420^o\)C, (c) \(80^o\)C .
 
