--- a/math154/taylor_examples.html
+++ b/math154/taylor_examples.html
@@ -140,6 +140,7 @@ so the classical energy is given by \(E =\frac{1}{2}mv^2\) (which gives the same
         <li>Next try to calculate the integral by letting \(g(t)=\int_0^t e^{-x^2} dx\). Expand \(g(t)\) in a 4th order Taylor polynomial and evaluate the result at \(t=1\). At what value of \(t\) should we expand \(g\)? Why?
         <li>Which is better? Why?
       </ol>
+      <P> <a href="./taylor_polynomial_example.html">Video solution</a>
   </div>
 
 <h2>Example 6  </h2>
