--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -20,7 +20,9 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px;">
+  <body style="width: 1000px; padding-left: 1cm" background="bg.jpg">
+
+
 
   <h1>Integral examples</h1>
 
@@ -39,7 +41,7 @@ a threshold temperature \(T_m\). This temperature varies among species, as does 
 degree-days required for full development.
 
 <P>Corn is a plant species where development is measured in degree-days. The threshold temperature for most varieties of corn grown in the US is 50 degrees F.
-The yield and number of degree-days varies greatly for different varieties of corn and often leads to colloquial names for different varieties, e.g. 85-day corn, 110-say corn, etc.
+The yield and number of degree-days varies greatly for different varieties of corn and often leads to colloquial names for different varieties, e.g. 85-day corn, 110-day corn, etc.
 You can see a running total of the accumulated degree-days for the year at the <a href="http://wicorn.ncgapremium.com/index.cfm?show=1&mapID=35"> Wisconsin Corn Growers Association page</a>. More information about growing degree-days (GDD) for corn can be found <a href="https://www.agry.purdue.edu/Ext/corn/news/articles.02/Hybrid_Maturity-0506.pdf">here</a> and <a href="./ES019.pdf">here</a>.
 
 <ol type="a">
