--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -138,3 +138,17 @@ Set up an integral equation that can be used to determine how big of a hole woul
   How long should the manuver last if the rocket is to be at rest again when the manuver is finished?
   Set up an equation that can be used to determine this time. It will not be solvable algebraically. Use a numerical method or graph and visually estimate a time.
 </div>
+
+   <h2>Example 8  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
+<div id="ex8" class="collapse">
+<P> Consider the region bounded by the curves \(y = x + \frac{4}{x}\) and \(y = 5\).
+  What is the volume of the solid created by rotating this region around the line \(x=-1\)?<br>
+  <ol>
+    <li>Sketch a figure of the situation including the axis of rotation.
+    <li>Calculate the locations of any intersections.
+    <li>Determine if you should use slicing (disks, washers, etc) or cylindrical shells. Be ready to justify your approach.
+    <li>Set up an integral representing the volume.
+    <li>Evaluate it.
+  </ol>
+</div>
