--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -52,6 +52,7 @@ The yield and number of degree-days varies greatly for different varieties of co
 You can see a running total of the accumulated degree-days for the year at the <a href="http://wicorn.ncgapremium.com/index.cfm?show=1&mapID=35"> Wisconsin Corn Growers Association page</a>. More information about growing degree-days (GDD) for corn can be found <a href="https://www.agry.purdue.edu/Ext/corn/news/articles.02/Hybrid_Maturity-0506.pdf">here</a> and <a href="./ES019.pdf">here</a>.
 
 <ol type="a">
+<li>Sketch a figure that shows the graphs of the temperature \(T(t)\) and threshold temperature \(T_m\) as functions of time \(t\). 
 <li>Construct an integral to represent the total number of degree-days in \(t_1\) days. This integral
 represents a function \(F(t_1)\) that contains the parameter \(T_m\) and the temperature function \(T(t)\) in addition
 to the independent variable \(t_1\).
