--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -138,7 +138,9 @@ Set up an integral equation that can be used to determine how big of a hole woul
   The retrorockets provide a thrust in the opposite direction of \(a(t) = t/2\).
   How long should the manuver last if the rocket is to be at rest again when the manuver is finished?
   Set up an equation that can be used to determine this time. It will not be solvable algebraically. Use a numerical method or graph and visually estimate a time.
-</div>
+
+  <P>Solution post on course <a href="canvas.uwstout.edu">Canvas</a> page.
+  </div>
 
    <h2>Example 8  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
