--- a/math154/integral_examples.html
+++ b/math154/integral_examples.html
@@ -139,7 +139,7 @@ Set up an integral equation that can be used to determine how big of a hole woul
   How long should the manuver last if the rocket is to be at rest again when the manuver is finished?
   Set up an equation that can be used to determine this time. It will not be solvable algebraically. Use a numerical method or graph and visually estimate a time.
 
-  <P>Solution post on course <a href="canvas.uwstout.edu">Canvas</a> page.
+  <P>Solution post on course <a href="https://uwsto.instructure.com/courses/142668">Canvas</a> page.
   </div>
 
    <h2>Example 8  </h2>
