--- a/math154/work_fluid_forces.html
+++ b/math154/work_fluid_forces.html
@@ -126,6 +126,23 @@ $(function () {
       <li> How far from the top of the cylinder is the slice?
     </ul>
 </div>
+  
+<h2>Example 6a - Spherical tank  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6a">Example 6a</button>
+<div id="ex6a" class="collapse">
+  <P> A spherical tank with radius \(R\) meters is filled with water.
+    The density of water is \(\delta = 1000\) kg/m\(^3\) and the acceleration due to gravity near the surface of the Earth is \(g=9.8\)m/sec\(^2\).
+    What is the work done pumping the water out of the top?
+
+  <p>Some questions to consider:
+    <ul>
+      <li> Let's place the origin of our coordinate system at the origin of the sphere. Why does this make sense?
+      <li> What is the equation of a circle with radius \(R\) centered at the origin?
+      <li> What is the relationship between density, gravity, volume, and force?
+      <li> What does a slice across the sphere look like?
+      <li> How far from the top of the sphere is the slice?
+    </ul>
+</div>
 
 <h2>Example 7 - Triangular trough  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
