--- a/math154/work_fluid_forces.html
+++ b/math154/work_fluid_forces.html
@@ -110,6 +110,7 @@ $(function () {
     <li>Determine the work required to pull the chain up to the top of the platform.
     <li>Determine the work required to move the mass 30 feet to the platform.
     <li>What is the total work required for the task?
+    <li>The conversion between foot-pounds and calories is 1 foot-pound = 0.00032405 calories. How many calories are required to complete the Heavy Metal challenge?
   </ul>
 </div>
 
