--- a/math154/work_fluid_forces.html
+++ b/math154/work_fluid_forces.html
@@ -178,8 +178,8 @@ $(function () {
   <ol>
     <li> What is the relationship between force and pressure?
     <li> What is the relationship between density, pressure, depth, and gravity?
-    <li> What is the pressure on a horizontal 100 square foot metal plate?
-    <li> What if the plate above is oriented vertically? Should it be greater or less than the force on the horizontal plate?
+    <li> What is the pressure on a horizontal 100 square foot metal plate? the force?
+    <li> What if the plate above is oriented vertically? Should the force be greater or less than the force on the horizontal plate?
     <li> Set up an integral representing the total force due to hydrostatic pressure on a circular porthole with diameter 2 feet in the middle of the vertical plate above.
   </ol>
 </div>
